welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:6: error: ')' expected but 'if' found.
  if((a>=40 && a<= 50) && (b>=40 && b<=50) {
  ^in3050:9: error: ')' expected but 'if' found.
  if(c>=1) {
  ^in3050:12: error: ';' expected but 'return' found.
  return false   
  ^